# JUMP_validator

./: .gitignore  JUMP-validator-gui.py  JUMP-validator.ipynb  JUMP-validator.py  JUMP_l_modules.py  README.md  environment.yml  jump_l.params  jump_validator.params  manualValidationSpectra.py  manualValidationSpectra_v007.py  pyproject.toml  requirements.txt
.github/workflows/: build-binaries.yml
ExampleInputFile/: Check_pho_peptides_Chao.xlsx  ID_custom.txt  jump_validator.params  peptide.txt
jump_validator/: JUMP_l_modules.py  __init__.py  __main__.py  cli.py  gui.py  validator.py
packaging/pyinstaller/: jump-validator-gui.spec  jump-validator.spec
packaging/scripts/: build.ps1  build.sh
